GPencil: Flickering when use Background or Camera image #76886

Closed
opened 2020-05-19 17:43:00 +02:00 by John Grigni · 22 comments

System Information
Operating system: MacOS Catalina 10.15.4
iMac Retina 5K, late 2017
Graphics card: Radeon Pro 580 8GB

Blender Version
Broken: (2.83 beta)
Worked: (2.82a)

Short description of error
A grease pencil object with a build modifier flickers in opacity in some strokes of a multi-stroke object.
It occurs in the Sequential mode with Grow or Shrink transition but not Fade transition.

Exact steps for others to reproduce the error

  • Open attached file
  • Run animation
    Note: It seems to be related to the background image.
    flickeringBuild.blend
**System Information** Operating system: MacOS Catalina 10.15.4 iMac Retina 5K, late 2017 Graphics card: Radeon Pro 580 8GB **Blender Version** Broken: (2.83 beta) Worked: (2.82a) **Short description of error** A grease pencil object with a build modifier flickers in opacity in some strokes of a multi-stroke object. It occurs in the Sequential mode with Grow or Shrink transition but not Fade transition. **Exact steps for others to reproduce the error** - Open attached file - Run animation Note: It seems to be related to the background image. [flickeringBuild.blend](https://archive.blender.org/developer/F8553321/flickeringBuild.blend)
Author

Added subscriber: @JohnGrigni-4

Added subscriber: @JohnGrigni-4

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Could you provide a simple file showing the problem?

Could you provide a simple file showing the problem?
Author

Actually, I think the culprit is that I had a background image in the camera view. When I disabled it, the flicker disappeared. It also didn't show in the render. Not sure what's going on, but here is the file. The flicker occurs in frames 41, 50, 76, and 88. It also isn't specific strokes, it looks like there is an invisible rectangle that occurs only on the right hand side of the image. flickeringBuild.blend

Actually, I think the culprit is that I had a background image in the camera view. When I disabled it, the flicker disappeared. It also didn't show in the render. Not sure what's going on, but here is the file. The flicker occurs in frames 41, 50, 76, and 88. It also isn't specific strokes, it looks like there is an invisible rectangle that occurs only on the right hand side of the image. [flickeringBuild.blend](https://archive.blender.org/developer/F8545445/flickeringBuild.blend)

Here is working normally with either the latest stable or current development versions of Blender:
gp_ok.gif

Please try the latest daily build: https://builder.blender.org/download/

Here is working normally with either the latest stable or current development versions of Blender: ![gp_ok.gif](https://archive.blender.org/developer/F8546854/gp_ok.gif) Please try the latest daily build: https://builder.blender.org/download/
Author

I notice you turned off the background image in the camera view. As I mentioned, when you disable the background image, the flicker disappears. I'll try the latest build just in case.

I notice you turned off the background image in the camera view. As I mentioned, when you disable the background image, the flicker disappears. I'll try the latest build just in case.

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I just opened the file and slid the frames.
It appears to be a MacOS-specific bug.

I just opened the file and slid the frames. It appears to be a MacOS-specific bug.

Added subscriber: @antoniov

Added subscriber: @antoniov

No problem here in Windows 10 with NVIDIA RTX2080 TI card.

No problem here in Windows 10 with NVIDIA RTX2080 TI card.
Author

I just realized i never packed the background image into the file, my apologies{F8553321}

I just realized i never packed the background image into the file, my apologies{[F8553321](https://archive.blender.org/developer/F8553321/flickeringBuild.blend)}

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

In the new file I can reproduce the problem.
I updated the description.

In the new file I can reproduce the problem. I updated the description.

Added subscriber: @fclem

Added subscriber: @fclem

I can reproduce too. It's clear is a problem with the background image.

IIRC there was already a bug like this open and set as know issue. Maybe @fclem has the answer.

image.png

I can reproduce too. It's clear is a problem with the background image. IIRC there was already a bug like this open and set as know issue. Maybe @fclem has the answer. ![image.png](https://archive.blender.org/developer/F8555390/image.png)

I have tested, and using a plane with the image (just use Image as Plane add-on and scale image) works perfect.

image.png

Flickering_Image_as_Plane.blend

I have tested, and using a plane with the image (just use Image as Plane add-on and scale image) works perfect. ![image.png](https://archive.blender.org/developer/F8555399/image.png) [Flickering_Image_as_Plane.blend](https://archive.blender.org/developer/F8555401/Flickering_Image_as_Plane.blend)
Antonio Vazquez changed title from Build modifier on Grease Pencil causes opacity flickering to GPencil: Flickering when use Background or Camera image 2020-05-26 12:27:49 +02:00

Added subscriber: @Alastair

Added subscriber: @Alastair

With all else the same, lowering the opacity of the Grease Pencil layer which contains the strokes ('Lines' in this case) to below 1.0 also stops the flickering. GreasePencil_Flickering_Opacity.PNG

With all else the same, lowering the opacity of the Grease Pencil layer which contains the strokes ('Lines' in this case) to below 1.0 also stops the flickering. ![GreasePencil_Flickering_Opacity.PNG](https://archive.blender.org/developer/F8565339/GreasePencil_Flickering_Opacity.PNG)

This is due to the bounding box of the GPencil object being incorrect for the buggy frames.
The call to BKE_object_boundbox_get inside gpencil_object_cache_add is returning a Unit boundbox incorrectly.

I'll leave it up to @antoniov since it is not a drawing issue.

This is due to the bounding box of the GPencil object being incorrect for the buggy frames. The call to `BKE_object_boundbox_get` inside `gpencil_object_cache_add` is returning a Unit boundbox incorrectly. I'll leave it up to @antoniov since it is not a drawing issue.
Antonio Vazquez self-assigned this 2020-07-02 09:02:54 +02:00

This issue was referenced by 22197d7f8a

This issue was referenced by 22197d7f8a26fb1284435f554fbc8bb4a1735f16

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Fixed, Thanks @fclem for finding the root cause.

Fixed, Thanks @fclem for finding the root cause.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76886
No description provided.