Fix T76886: GPencil - Flickering when use Background or Camera image

The problem was if some stroke was empty and the changed flag was set to the last stroke wrongly.